# sentry-lambda-extension

./: .craft.yml  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: build.yml  release.yml
mock-aws-lambda-extensions-api/: mock-aws-lambda-extensions-api.py
scripts/: build-in-docker.sh  build.sh  bump-version.sh
src/: main.rs  sentry-lambda-extension.rs
