[package]
name = "aws-lambda-extension"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10.8", default-features = false, features = ["blocking", "json"] }

[[bin]]
name = "sentry-lambda-extension"
path = "src/sentry-lambda-extension.rs"