[package]
name = "aws-lambda-extension"
authors = ["Sentry <oss@sentry.io>"]
description = "AWS Lambda Extension for Sentry"
homepage = "https://github.com/getsentry/sentry-lambda-extension"
repository = "https://github.com/getsentry/sentry-lambda-extension"
version = "0.1.3"
edition = "2021"
license-file = "LICENSE"

[dependencies]
anyhow = "1.0"
failure = "0.1.8"
serde = { version = "=1.0.114", features = ["derive"] }
serde_json = "1.0.55"
libc = "0.2.124"
ctrlc = { version = "3.0", features = ["termination"] }
reqwest = { version = "0.11.1", default-features = false, features = ["blocking", "json"] }
sentry-types = "0.20.0"
relay-server = { git = "https://github.com/getsentry/relay" }
relay-config = { git = "https://github.com/getsentry/relay" }
relay-log = { git = "https://github.com/getsentry/relay" }
